tests/paczka1/fuzzy1/33259984.err
Error in line 11: RYm A810 92,6
Error in line 7: A560 A778 86,8
Error in line 19: 9FXs1Rne S310 -2,6
Error in line 29: oM7n1nmxk3 A778 216,53
Error in line 26: vIdYVn1tJ S310 54,6
Error in line 38: 9FXs1Rne A560 21,30
